--- a/package.json
+++ b/package.json
@@ -58,6 +58,6 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "ai": "^5.0.40",
-    "tokenlens": "^1.2.1"
+    "tokenlens": "^1.3.0-canary.3"
   }
 }
