--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "vite-plugin-dts": "^4.5.4"
   },
   "peerDependencies": {
+    "@ai-sdk/react": ">=0.0.1",
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
-    "@ai-sdk/react": ">=0.0.1"
+    "react-dom": ">=16.8.0"
   },
   "description": "AI development tools for debugging and monitoring AI SDKs streams",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "ai",
     "devtools",
@@ -58,6 +60,6 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "ai": "^5.0.40",
-    "tokenlens": "^1.3.0-canary.3"
+    "tokenlens": "1.3.0-canary.5"
   }
 }
