--- a/package.json
+++ b/package.json
@@ -1,64 +1,9 @@
 {
-  "name": "ai-sdk-devtools",
-  "version": "0.5.0",
-  "author": "Midday",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/midday-ai/midday.git",
-    "directory": "packages/ai-devtools"
-  },
-  "main": "dist/index.esm.js",
-  "module": "dist/index.esm.js",
-  "style": "dist/ai-sdk-devtools.css",
-  "exports": {
-    ".": {
-      "import": "./dist/index.esm.js",
-      "require": "./dist/index.umd.js",
-      "types": "./dist/index.d.ts"
-    },
-    "./style.css": "./dist/ai-sdk-devtools.css"
-  },
-  "devDependencies": {
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.2",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.5",
-    "vite-plugin-dts": "^4.5.4"
-  },
-  "peerDependencies": {
-    "@ai-sdk/react": ">=0.0.1",
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
-  },
-  "description": "AI development tools for debugging and monitoring AI SDKs streams",
-  "files": [
-    "dist"
-  ],
-  "keywords": [
-    "ai",
-    "devtools",
-    "debugging",
-    "chat",
-    "streaming",
-    "development"
-  ],
-  "license": "MIT",
-  "publishConfig": {
-    "access": "public"
-  },
-  "scripts": {
-    "build": "vite build && tsc --emitDeclarationOnly",
-    "clean": "rm -rf dist",
-    "prepublishOnly": "npm run build"
-  },
-  "types": "dist/index.d.ts",
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.2",
-    "@mui/material": "^7.3.2",
-    "ai": "^5.0.44",
-    "tokenlens": "1.3.0-canary.5"
-  }
+    "name": "@ai-sdk-tools/root",
+    "version": "0.1.0",
+    "private": true,
+    "workspaces": [
+        "packages/*",
+        "apps/*"
+    ]
 }
