--- a/packages/artifacts/package.json
+++ b/packages/artifacts/package.json
@@ -1,52 +1,62 @@
 {
-    "name": "@ai-sdk-tools/artifacts",
-    "private": false,
-    "version": "0.1.0",
-    "description": "Artifacts for AI SDK Tools",
-    "main": "./dist/index.js",
-    "module": "./dist/index.mjs",
-    "types": "./dist/index.d.ts",
-    "exports": {
-      ".": {
-        "types": "./dist/index.d.ts",
-        "import": "./dist/index.mjs",
-        "require": "./dist/index.js"
-      }
-    },
-    "files": [
-      "dist",
-      "README.md",
-      "LICENSE"
-    ],
-    "scripts": {
-      "build": "tsup",
-      "dev": "tsup --watch",
-      "clean": "rm -rf dist",
-      "prepublishOnly": "bun run clean && bun run build",
-      "type-check": "tsc --noEmit"
-    },
-    "keywords": [
-      "ai",
-      "artifacts",
-      "debugging",
-      "chat",
-      "streaming",
-      "development",
-      "ai-sdk",
-      "react"
-    ],
-    "author": "Pontus Abrahamsson",
-    "license": "MIT",
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/midday-ai/ai-sdk-tools.git"
-    },
-    "bugs": {
-      "url": "https://github.com/midday-ai/ai-sdk-tools/issues"
-    },
-    "homepage": "https://github.com/midday-ai/ai-sdk-tools#readme",
-    "publishConfig": {
-      "access": "public"
+  "name": "@ai-sdk-tools/artifacts",
+  "private": false,
+  "version": "0.2.0",
+  "description": "Advanced streaming interfaces for AI applications",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
     }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "clean": "rm -rf dist",
+    "prepublishOnly": "bun run clean && bun run build",
+    "type-check": "tsc --noEmit"
+  },
+  "keywords": [
+    "ai",
+    "artifacts",
+    "streaming",
+    "react",
+    "ai-sdk",
+    "typescript"
+  ],
+  "author": "Pontus Abrahamsson",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/midday-ai/ai-sdk-tools.git"
+  },
+  "bugs": {
+    "url": "https://github.com/midday-ai/ai-sdk-tools/issues"
+  },
+  "homepage": "https://github.com/midday-ai/ai-sdk-tools#readme",
+  "publishConfig": {
+    "access": "public"
+  },
+  "dependencies": {
+    "zod": "^4.1.8",
+    "@ai-sdk-tools/store": "workspace:*"
+  },
+  "peerDependencies": {
+    "ai": "^4.0.0",
+    "react": "^18.0.0 || ^19.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.13",
+    "typescript": "^5.9.2",
+    "tsup": "^8.5.0"
   }
-  
+}
