--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -11,18 +11,19 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.30",
-    "i": "^0.3.7",
+    "@ai-sdk-tools/devtools": "workspace:*",
+    "@ai-sdk-tools/store": "workspace:*",
     "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "19.1.1",
+    "react-dom": "19.1.1"
   },
   "devDependencies": {
     "typescript": "^5",
-    "@types/node": "^20",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
-    "@biomejs/biome": "2.2.0"
+    "@biomejs/biome": "2.2.4"
   }
 }
