--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.30",
     "ai": "^5.0.44",
-    "@ai-sdk-tools/store": "^0.1.0",
+    "@ai-sdk-tools/store": "workspace:*",
+    "@ai-sdk-tools/devtools": "workspace:*",
+    "@ai-sdk-tools/artifacts": "workspace:*",
     "i": "^0.3.7",
     "next": "15.5.3",
     "react": "19.1.1",
