fix: transform workspace:* dependencies to real versions before publishing
- Add transform-workspace-deps.ts script to convert workspace:* → ^version
- Add restore-workspace-deps.ts script to revert back to workspace:*
- Add check-published-deps.ts script to verify no workspace:* in publishable packages
- Update artifacts package prepublishOnly script to transform dependencies
- Add utility scripts to root package.json

Fixes issue where published packages contained unresolvable workspace:* dependencies,
breaking external installation with error 'Workspace dependency not found'.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "packages/*",
     "apps/*"
   ],
+  "scripts": {
+    "transform-deps": "bun scripts/transform-workspace-deps.ts",
+    "restore-deps": "bun scripts/restore-workspace-deps.ts",
+    "check-deps": "bun scripts/check-published-deps.ts"
+  },
   "dependencies": {
     "biome": "^0.3.3"
   }
