--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "dev:beta": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' dev",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "changeset publish",
+    "release": "node scripts/pre-publish.js prepare && changeset publish && node scripts/pre-publish.js restore",
     "changeset:beta": "changeset pre enter beta",
     "changeset:exit-beta": "changeset pre exit",
     "version-packages:beta": "changeset version --snapshot beta",
-    "release:beta": "changeset publish --tag beta",
+    "release:beta": "node scripts/pre-publish.js prepare && changeset publish && node scripts/pre-publish.js restore",
     "clean": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' --filter='@ai-sdk-tools/chrome-extension' clean",
     "clean:beta": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' clean",
     "type-check": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' --filter='@ai-sdk-tools/chrome-extension' type-check",
-    "type-check:beta": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' type-check"
+    "type-check:beta": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' type-check",
+    "dev:setup": "node scripts/pre-publish.js restore && bun install"
   },
   "dependencies": {
     "biome": "^0.3.3"
