--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -11,11 +11,12 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.30",
-    "ai": "^5.0.44",
-    "@ai-sdk-tools/store": "workspace:*",
-    "@ai-sdk-tools/devtools": "workspace:*",
     "@ai-sdk-tools/artifacts": "workspace:*",
+    "@ai-sdk-tools/devtools": "workspace:*",
+    "@ai-sdk-tools/store": "workspace:*",
+    "@ai-sdk/openai": "^2.0.30",
+    "@openpanel/nextjs": "^1.0.8",
+    "ai": "^5.0.44",
     "next": "15.5.3",
     "react": "19.1.1",
     "react-dom": "19.1.1",
