--- a/packages/artifacts/package.json
+++ b/packages/artifacts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ai-sdk-tools/artifacts",
   "private": false,
-  "version": "0.4.0",
+  "version": "0.5.0-beta.2",
   "description": "Advanced streaming interfaces for AI applications",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -61,7 +61,7 @@
     "@ai-sdk-tools/store": "workspace:*"
   },
   "peerDependencies": {
-    "@ai-sdk-tools/store": "*",
+    "@ai-sdk-tools/store": "0.1.3-beta.2",
     "ai": "^4.0.0",
     "react": "^18.0.0 || ^19.0.0"
   }
