--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -58,7 +58,7 @@
     "@mui/material": "^7.3.2",
     "ai": "^5.0.44",
     "react-json-view-lite": "^2.5.0",
-    "tokenlens": "1.3.0-canary.5"
+    "tokenlens": "1.3.0"
   },
   "repository": {
     "type": "git",
