--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ai-sdk-tools/devtools",
-  "version": "0.7.0-beta.0",
+  "version": "0.7.0",
   "description": "AI development tools for debugging and monitoring AI SDKs streams",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -48,8 +48,7 @@
     "react-dom": "^19.2.0",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3",
-    "@ai-sdk/react": "^2.0.60",
-    "@ai-sdk-tools/store": "workspace:*"
+    "@ai-sdk/react": "^2.0.60"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -58,7 +57,8 @@
     "@mui/material": "^7.3.4",
     "ai": "^5.0.60",
     "react-json-view-lite": "^2.5.0",
-    "tokenlens": "1.3.1"
+    "tokenlens": "1.3.1",
+    "@ai-sdk-tools/store": "^0.7.0"
   },
   "repository": {
     "type": "git",
