--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -25,6 +25,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^3.2.1",
+    "redis": "^5.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
@@ -38,6 +39,9 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "@upstash/redis": "^1.35.4"
   },
   "overrides": {
     "react-is": "^19.0.0-rc-69d4b800-20241021"
