--- a/packages/agents/package.json
+++ b/packages/agents/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "@ai-sdk-tools/cache",
-  "version": "0.6.1",
-  "description": "Simple caching wrapper for AI SDK tools - cache expensive tool executions with zero configuration",
+  "name": "@ai-sdk-tools/agents",
+  "version": "0.1.0",
+  "description": "Multi-agent orchestration system built on AI SDK v5 - handoffs, routing, and coordination for any AI provider",
   "keywords": [
     "ai",
     "ai-sdk",
-    "tools",
-    "cache",
-    "caching",
-    "performance",
+    "agents",
+    "multi-agent",
+    "orchestration",
+    "handoff",
+    "routing",
     "llm",
     "openai",
-    "anthropic"
+    "anthropic",
+    "google",
+    "claude"
   ],
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/midday-ai/ai-sdk-tools.git",
-    "directory": "packages/cache"
+    "directory": "packages/agents"
   },
   "bugs": {
     "url": "https://github.com/midday-ai/ai-sdk-tools/issues"
   },
-  "homepage": "https://github.com/midday-ai/ai-sdk-tools/tree/main/packages/cache#readme",
+  "homepage": "https://github.com/midday-ai/ai-sdk-tools/tree/main/packages/agents#readme",
   "type": "module",
   "exports": {
     ".": {
@@ -46,10 +49,14 @@
     "type-check": "tsc --noEmit"
   },
   "peerDependencies": {
-    "ai": ">=5.0.0"
+    "ai": ">=5.0.0",
+    "zod": "^3.25.76 || ^4.1.8"
   },
   "peerDependenciesMeta": {
     "@ai-sdk-tools/artifacts": {
+      "optional": true
+    },
+    "@ai-sdk-tools/cache": {
       "optional": true
     }
   },
@@ -57,8 +64,7 @@
     "@types/node": "^24.7.0",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3",
-    "vitest": "^3.2.4",
-    "zod": "^4.1.11",
+    "zod": "^4.1.12",
     "ai": "^5.0.60"
   },
   "publishConfig": {
