--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.5",
+    "@faker-js/faker": "^10.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^24",
     "@types/react": "^19",
