--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -15,7 +15,7 @@
     "@ai-sdk-tools/cache": "workspace:*",
     "@ai-sdk-tools/devtools": "workspace:*",
     "@ai-sdk-tools/store": "workspace:*",
-    "@ai-sdk/openai": "^2.0.44",
+    "@ai-sdk/openai": "^2.0.45",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -27,19 +27,20 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@xyflow/react": "^12.8.6",
-    "ai": "^5.0.60",
+    "ai": "^5.0.62",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.545.0",
+    "motion": "^12.23.22",
     "nanoid": "^5.1.6",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-syntax-highlighter": "^15.6.6",
-    "recharts": "^3.2.1",
+    "recharts": "2.15.4",
     "redis": "^5.8.3",
     "sonner": "^2.0.7",
     "streamdown": "^1.3.0",
