--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "apps/*"
   ],
   "scripts": {
-    "build": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' --filter='@ai-sdk-tools/agents' --filter='@ai-sdk-tools/chrome-extension' build",
-    "build:beta": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' --filter='@ai-sdk-tools/agents' build",
+    "build": "bun run build:packages",
+    "build:packages": "bun run build:store && bun run build:dependent-packages",
+    "build:store": "bun run -r --filter='@ai-sdk-tools/store' build",
+    "build:dependent-packages": "bun run -r --filter='@ai-sdk-tools/artifacts' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/agents' --filter='@ai-sdk-tools/chrome-extension' build",
+    "build:beta": "bun run build:store && bun run -r --filter='@ai-sdk-tools/artifacts' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/agents' build",
     "build:example": "bun run build && cd apps/example && bun run build",
     "dev": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' --filter='@ai-sdk-tools/agents' --filter='@ai-sdk-tools/chrome-extension' dev",
     "dev:beta": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' --filter='@ai-sdk-tools/agents' dev",
