--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@upstash/ratelimit": "^2.0.6",
     "@xyflow/react": "^12.8.6",
     "ai": "^5.0.62",
     "class-variance-authority": "^0.7.1",
