--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -51,14 +51,15 @@
     "@ai-sdk/react": "^2.0.60"
   },
   "dependencies": {
+    "@ai-sdk-tools/store": "^0.7.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@upstash/redis": "^1.35.5",
     "ai": "^5.0.60",
     "react-json-view-lite": "^2.5.0",
-    "tokenlens": "1.3.1",
-    "@ai-sdk-tools/store": "^0.7.0"
+    "tokenlens": "1.3.1"
   },
   "repository": {
     "type": "git",
