--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -42,23 +42,26 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3",
-    "@ai-sdk/react": "^2.0.60"
+    "@ai-sdk/react": "^2.0.68"
   },
   "dependencies": {
+    "@ai-sdk-tools/store": "^0.7.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
-    "ai": "^5.0.60",
+    "@types/dagre": "^0.7.53",
+    "@xyflow/react": "^12.8.6",
+    "ai": "^5.0.68",
+    "dagre": "^0.8.5",
     "react-json-view-lite": "^2.5.0",
-    "tokenlens": "1.3.1",
-    "@ai-sdk-tools/store": "^0.7.0"
+    "tokenlens": "1.3.1"
   },
   "repository": {
     "type": "git",
