--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -15,8 +15,9 @@
     "@ai-sdk-tools/artifacts": "workspace:*",
     "@ai-sdk-tools/cache": "workspace:*",
     "@ai-sdk-tools/devtools": "workspace:*",
+    "@ai-sdk-tools/memory": "workspace:*",
     "@ai-sdk-tools/store": "workspace:*",
-    "@ai-sdk/openai": "^2.0.45",
+    "@ai-sdk/openai": "^2.0.49",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -29,23 +30,25 @@
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@upstash/ratelimit": "^2.0.6",
     "@xyflow/react": "^12.8.6",
-    "ai": "^5.0.63",
+    "ai": "^5.0.68",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
-    "motion": "^12.23.22",
+    "motion": "^12.23.24",
     "nanoid": "^5.1.6",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-syntax-highlighter": "^15.6.6",
-    "recharts": "2.15.4",
+    "recharts": "3.2.1",
     "redis": "^5.8.3",
+    "shiki": "^3.13.0",
     "sonner": "^2.0.7",
-    "streamdown": "^1.3.0",
+    "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "tokenlens": "^1.3.1",
     "use-stick-to-bottom": "^1.1.1",
