--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "apps/*"
   ],
   "scripts": {
-    "build": "bun run build:store && bun run build:artifacts && bun run build:devtools && bun run build:agents && bun run build:cache",
+    "build": "bun run build:store && bun run build:artifacts && bun run build:devtools && bun run build:memory && bun run build:agents && bun run build:cache",
     "build:store": "cd packages/store && bun run build",
     "build:artifacts": "cd packages/artifacts && bun run build",
     "build:devtools": "cd packages/devtools && bun run build",
+    "build:memory": "cd packages/memory && bun run build",
     "build:agents": "cd packages/agents && bun run build",
     "build:cache": "cd packages/cache && bun run build",
     "build:example": "bun run build && cd apps/example && bun run build",
