--- a/packages/memory/package.json
+++ b/packages/memory/package.json
@@ -37,5 +37,8 @@
     "drizzle-orm": "^0.44.6",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
