--- a/packages/artifacts/package.json
+++ b/packages/artifacts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ai-sdk-tools/artifacts",
   "private": false,
-  "version": "0.8.0",
+  "version": "0.8.1",
   "description": "Advanced streaming interfaces for AI applications",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -52,14 +52,14 @@
     "access": "public"
   },
   "dependencies": {
-    "zod": "^4.1.11",
-    "@ai-sdk-tools/store": "^0.7.0"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@ai-sdk/react": "^2.0.60",
     "@types/react": "^19.2.0",
     "typescript": "^5.9.3",
-    "tsup": "^8.5.0"
+    "tsup": "^8.5.0",
+    "@ai-sdk-tools/store": "workspace:*"
   },
   "peerDependencies": {
     "ai": "^5.0.0",
