--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -11,12 +11,13 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "ai-sdk-tools": "workspace:*",
     "@ai-sdk/openai": "^2.0.49",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
@@ -26,8 +27,10 @@
     "@upstash/ratelimit": "^2.0.6",
     "@xyflow/react": "^12.8.6",
     "ai": "^5.0.68",
+    "ai-sdk-tools": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
