chore(website): add geist font and update font usage
- Add geist package as a dependency
- Replace Geist font with Geist_Mono in layout and global styles
- Update body and font variables to use geist-mono font
- Remove unused Geist font import and related variables
- Bump multiple package versions in bun.lock for consistency

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -17,6 +17,7 @@
     "@ai-sdk/openai": "^2.0.46",
     "@openpanel/nextjs": "^1.0.8",
     "ai": "^5.0.64",
+    "geist": "^1.5.1",
     "next": "15.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
