--- a/packages/memory/package.json
+++ b/packages/memory/package.json
@@ -22,10 +22,14 @@
   },
   "peerDependencies": {
     "@upstash/redis": "^1.34.3",
+    "chromadb": "^3.0.17",
     "drizzle-orm": "^0.36.0"
   },
   "peerDependenciesMeta": {
     "@upstash/redis": {
+      "optional": true
+    },
+    "chromadb": {
       "optional": true
     },
     "drizzle-orm": {
@@ -34,6 +38,7 @@
   },
   "devDependencies": {
     "@upstash/redis": "^1.35.5",
+    "chromadb": "^3.0.17",
     "drizzle-orm": "^0.44.6",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3"
