--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -11,7 +11,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.49",
+    "@ai-sdk/openai": "^2.0.52",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -26,7 +26,7 @@
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@upstash/ratelimit": "^2.0.6",
     "@xyflow/react": "^12.8.6",
-    "ai": "^5.0.68",
+    "ai": "^5.0.70",
     "ai-sdk-tools": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,10 +34,11 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
+    "geist": "^1.5.1",
     "lucide-react": "^0.545.0",
     "motion": "^12.23.24",
     "nanoid": "^5.1.6",
-    "next": "15.5.4",
+    "next": "15.5.5",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -53,7 +54,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.5",
+    "@biomejs/biome": "2.2.6",
     "@faker-js/faker": "^10.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^24",
