--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -39,7 +39,13 @@
   "peerDependencies": {
     "@ai-sdk/react": ">=0.0.1",
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react-dom": ">=16.8.0",
+    "@ai-sdk-tools/store": "*"
+  },
+  "peerDependenciesMeta": {
+    "@ai-sdk-tools/store": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@types/react": "^19.2.2",
@@ -60,8 +66,7 @@
     "@xyflow/react": "^12.8.6",
     "ai": "^5.0.68",
     "dagre": "^0.8.5",
-    "react-json-view-lite": "^2.5.0",
-    "tokenlens": "1.3.1"
+    "react-json-view-lite": "^2.5.0"
   },
   "repository": {
     "type": "git",
