Add the @types/node dependency to all packages/* to fix the build error.

--- a/packages/memory/package.json
+++ b/packages/memory/package.json
@@ -33,6 +33,7 @@
     }
   },
   "devDependencies": {
+    "@types/node": "^24.7.0",
     "@upstash/redis": "^1.35.5",
     "drizzle-orm": "^0.44.6",
     "tsup": "^8.5.0",
