--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -48,6 +48,7 @@
     }
   },
   "devDependencies": {
+    "@types/node": "^24.7.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "react": "^19.2.0",
