--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -42,6 +42,7 @@
     "zustand": ">=5.0.0"
   },
   "devDependencies": {
+    "@types/node": "^24.7.0",
     "@types/react": "^19.2.0",
     "react": "^19.2.0",
     "tsup": "^8.5.0",
