add debugging and fix memory issues

--- a/packages/agents/package.json
+++ b/packages/agents/package.json
@@ -49,6 +49,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk-tools/debug": "workspace:*",
     "@ai-sdk-tools/memory": "workspace:*"
   },
   "peerDependencies": {
