--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "apps/*"
   ],
   "scripts": {
-    "build": "bun run build:store && bun run build:artifacts && bun run build:devtools && bun run build:memory && bun run build:agents && bun run build:cache && bun run build:ai-sdk-tools",
+    "build": "bun run build:store && bun run build:artifacts && bun run build:devtools && bun run build:memory && bun run build:agents && bun run build:cache && bun run build:ai-sdk-tools && bun run build:debug",
     "build:store": "cd packages/store && bun run build",
     "build:artifacts": "cd packages/artifacts && bun run build",
     "build:devtools": "cd packages/devtools && bun run build",
@@ -16,6 +16,7 @@
     "build:cache": "cd packages/cache && bun run build",
     "build:ai-sdk-tools": "cd packages/ai-sdk-tools && bun run build",
     "build:example": "bun run build && cd apps/example && bun run build",
+    "build:debug": "cd packages/debug && bun run build",
     "dev": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' --filter='@ai-sdk-tools/agents' --filter='@ai-sdk-tools/chrome-extension' dev",
     "dev:beta": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' --filter='@ai-sdk-tools/agents' dev",
     "changeset": "changeset",
