--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "apps/*"
   ],
   "scripts": {
-    "build": "bun run build:store && bun run build:artifacts && bun run build:devtools && bun run build:memory && bun run build:agents && bun run build:cache && bun run build:ai-sdk-tools && bun run build:debug",
+    "build": "bun run build:debug && bun run build:store && bun run build:artifacts && bun run build:devtools && bun run build:memory && bun run build:agents && bun run build:cache && bun run build:ai-sdk-tools",
     "build:store": "cd packages/store && bun run build",
     "build:artifacts": "cd packages/artifacts && bun run build",
     "build:devtools": "cd packages/devtools && bun run build",
