Refactor memory provider imports to use subpaths

--- a/packages/memory/package.json
+++ b/packages/memory/package.json
@@ -8,6 +8,11 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
+    },
+    "./*": {
+      "types": "./dist/providers/*.d.ts",
+      "import": "./dist/providers/*.js",
+      "require": "./dist/providers/*.cjs"
     }
   },
   "files": [
