--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -35,16 +35,17 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "exa-js": "^1.10.2",
     "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "nanoid": "^5.1.6",
-    "next": "15.5.6",
+    "next": "16.0.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-syntax-highlighter": "^15.6.6",
+    "react-syntax-highlighter": "^16.0.0",
     "recharts": "3.3.0",
     "redis": "^5.8.3",
     "shiki": "^3.13.0",
@@ -56,7 +57,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.6",
+    "@biomejs/biome": "2.2.7",
     "@faker-js/faker": "^10.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^24",
