fix(devtools): add @ai-sdk-tools/store dependency for standalone usage
Fixes a Turbopack/Next.js build failure when using @ai-sdk-tools/devtools without the monorepo. The built bundle imports ChatStoreContext from @ai-sdk-tools/store, which was not declared, causing module resolution to fail.\n\nError excerpt:\n\n> Error: Turbopack build failed with 1 errors:\n./node_modules/@ai-sdk-tools/devtools/dist/index.mjs:9:1\nModule not found: Can't resolve '@ai-sdk-tools/store'\n\nThis change declares @ai-sdk-tools/store appropriately so standalone consumers resolve it at build-time.

--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -54,8 +54,7 @@
     "react-dom": "^19.2.0",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3",
-    "@ai-sdk/react": "^2.0.78",
-    "@ai-sdk-tools/store": "workspace:*"
+    "@ai-sdk/react": "^2.0.78"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -66,7 +65,8 @@
     "@xyflow/react": "^12.9.0",
     "ai": "^5.0.78",
     "dagre": "^0.8.5",
-    "react-json-view-lite": "^2.5.0"
+    "react-json-view-lite": "^2.5.0",
+    "@ai-sdk-tools/store": "workspace:*"
   },
   "repository": {
     "type": "git",
