Revert "fix(devtools): add @ai-sdk-tools/store dependency for standalone usage"
This reverts commit 786c6f7dbfa5e898489ded284787bde5ed1a7432.

--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -54,7 +54,8 @@
     "react-dom": "^19.2.0",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3",
-    "@ai-sdk/react": "^2.0.78"
+    "@ai-sdk/react": "^2.0.78",
+    "@ai-sdk-tools/store": "workspace:*"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -65,8 +66,7 @@
     "@xyflow/react": "^12.9.0",
     "ai": "^5.0.78",
     "dagre": "^0.8.5",
-    "react-json-view-lite": "^2.5.0",
-    "@ai-sdk-tools/store": "workspace:*"
+    "react-json-view-lite": "^2.5.0"
   },
   "repository": {
     "type": "git",
