--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -54,10 +54,10 @@
     "react-dom": "^19.2.0",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3",
-    "@ai-sdk/react": "^2.0.78",
-    "@ai-sdk-tools/store": "workspace:*"
+    "@ai-sdk/react": "^2.0.78"
   },
   "dependencies": {
+    "@ai-sdk-tools/store": "workspace:*",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
