--- a/packages/artifacts/package.json
+++ b/packages/artifacts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ai-sdk-tools/artifacts",
   "private": false,
-  "version": "0.9.0",
+  "version": "0.20.0",
   "description": "Advanced streaming interfaces for AI applications",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -55,14 +55,15 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@ai-sdk/react": "^2.0.78",
+    "@types/node": "^24.9.1",
+    "@ai-sdk/react": "beta",
     "@types/react": "^19.2.2",
     "typescript": "^5.9.3",
     "tsup": "^8.5.0",
     "@ai-sdk-tools/store": "workspace:*"
   },
   "peerDependencies": {
-    "ai": "^5.0.0",
+    "ai": "beta",
     "react": "^18.0.0 || ^19.0.0"
   }
 }
