--- a/packages/agents/package.json
+++ b/packages/agents/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ai-sdk-tools/agents",
-  "version": "0.9.1",
+  "version": "0.20.0",
   "description": "Multi-agent orchestration system built on AI SDK v5 - handoffs, routing, and coordination for any AI provider",
   "keywords": [
     "ai",
@@ -53,7 +53,7 @@
     "@ai-sdk-tools/memory": "workspace:*"
   },
   "peerDependencies": {
-    "ai": ">=5.0.0",
+    "ai": ">=beta",
     "zod": "^3.25.76 || ^4.1.8"
   },
   "peerDependenciesMeta": {
@@ -69,7 +69,7 @@
     "tsup": "^8.5.0",
     "typescript": "^5.9.3",
     "zod": "^4.1.12",
-    "ai": "^5.0.78"
+    "ai": "beta"
   },
   "publishConfig": {
     "access": "public"
