--- a/packages/memory/package.json
+++ b/packages/memory/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ai-sdk-tools/memory",
-  "version": "0.9.0",
+  "version": "0.20.0",
   "description": "Persistent memory system for AI agents",
   "type": "module",
   "exports": {
@@ -39,6 +39,7 @@
     }
   },
   "devDependencies": {
+    "@types/node": "^24.9.1",
     "@upstash/redis": "^1.35.6",
     "drizzle-orm": "^0.44.7",
     "tsup": "^8.5.0",
