--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "dev:beta": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' --filter='@ai-sdk-tools/agents' dev",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "changeset publish",
+    "release": "node scripts/pre-publish.js prepare && changeset publish && node scripts/pre-publish.js restore",
     "changeset:beta": "changeset pre enter beta",
     "changeset:exit-beta": "changeset pre exit",
     "version-packages:beta": "changeset version",
-    "release:beta": "changeset publish",
+    "release:beta": "node scripts/pre-publish.js prepare && changeset publish && node scripts/pre-publish.js restore",
     "clean": "bun run -r --filter='@ai-sdk-tools/*' clean",
     "clean:beta": "bun run -r --filter='@ai-sdk-tools/store' --filter='@ai-sdk-tools/devtools' --filter='@ai-sdk-tools/artifacts' --filter='@ai-sdk-tools/agents' clean",
     "type-check": "bun run -r --filter='@ai-sdk-tools/*' type-check",
