--- a/packages/artifacts/package.json
+++ b/packages/artifacts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ai-sdk-tools/artifacts",
   "private": false,
-  "version": "0.20.0",
+  "version": "0.32.0",
   "description": "Advanced streaming interfaces for AI applications",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -27,7 +27,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "clean": "rm -rf dist",
-    "prepublishOnly": "bun run clean && bun run build",
+    "prepublishOnly": "bun run build",
     "type-check": "tsc --noEmit"
   },
   "keywords": [
@@ -63,7 +63,7 @@
     "@ai-sdk-tools/store": "workspace:*"
   },
   "peerDependencies": {
-    "ai": "beta",
+    "ai": "^5.0.82",
     "react": "^18.0.0 || ^19.0.0"
   }
 }
