--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ai-sdk-tools/store",
-  "version": "0.20.0",
+  "version": "0.32.0",
   "description": "A drop-in replacement for @ai-sdk/react that automatically syncs chat state to Zustand stores",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -21,7 +21,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "clean": "rm -rf dist",
-    "prepublishOnly": "bun run clean && bun run build",
+    "prepublishOnly": "bun run build",
     "type-check": "tsc --noEmit"
   },
   "keywords": [
@@ -37,7 +37,7 @@
   "author": "Pontus Abrahamsson",
   "license": "MIT",
   "peerDependencies": {
-    "@ai-sdk/react": "beta",
+    "@ai-sdk/react": ">=2.0.0",
     "react": ">=18.0.0",
     "zustand": ">=5.0.0"
   },
@@ -47,7 +47,7 @@
     "tsup": "^8.5.0",
     "typescript": "^5.9.3",
     "zustand": "^5.0.8",
-    "@ai-sdk/react": "beta"
+    "@ai-sdk/react": "^2.0.82"
   },
   "repository": {
     "type": "git",
@@ -61,6 +61,6 @@
     "access": "public"
   },
   "dependencies": {
-    "ai": "beta"
+    "ai": "^5.0.82"
   }
 }
