--- a/packages/artifacts/package.json
+++ b/packages/artifacts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ai-sdk-tools/artifacts",
   "private": false,
-  "version": "0.32.0",
+  "version": "1.0.0-beta.3",
   "description": "Advanced streaming interfaces for AI applications",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
