--- a/packages/memory/package.json
+++ b/packages/memory/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ai-sdk-tools/memory",
-  "version": "0.32.0",
+  "version": "1.0.0-beta.3",
   "description": "Persistent memory system for AI agents",
   "type": "module",
   "exports": {
